--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ composeBom = "2025.04.00"
 hiltAndroidGradlePluginVersion = "2.56.2"
 hiltNavigationComposeVersion = "1.2.0"
 converterGsonVersion = "2.6.0"
+mockwebserver = "4.11.0"
 retrofit2KotlinCoroutinesAdapterVersion = "0.9.2"
 retrofitVersion = "2.9.0"
 truthVersion = "1.4.2"
@@ -42,6 +43,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInjectVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidGradlePluginVersion" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 retrofit2-kotlin-coroutines-adapter = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "retrofit2KotlinCoroutinesAdapterVersion" }
 truth = { module = "com.google.truth:truth", version.ref = "truthVersion" }
